rustmon/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustmon
  labels:
    k8s.labs.ahinh.me/app: rustmon
    k8s.labs.ahinh.me/component: app
spec:
  selector:
    matchLabels:
      k8s.labs.ahinh.me/app: rustmon
      k8s.labs.ahinh.me/component: app
  template:
    metadata:
      labels:
        k8s.labs.ahinh.me/app: rustmon
        k8s.labs.ahinh.me/component: app
    spec:
      containers:
        - name: rustmon
          # 2.0.0+ requires a newer version of psql which the operator does not provide
          image: alexander171294/rustmon:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 80
