rustmon/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustmon
  labels:
    k8s.labs.ahinh.me/app: rustmon
    k8s.labs.ahinh.me/component: app
spec:
  type: ClusterIP
  selector:
    k8s.labs.ahinh.me/app: rustmon
    k8s.labs.ahinh.me/component: app
  ports:
    - name: rustmon
      port: 80
      targetPort: 80
      protocol: TCP
