rustmon/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustmon
  labels:
    k8s.labs.ahinh.me/app: rustmon
  annotations:
    external-dns.alpha.kubernetes.io/hostname: rustmon.k8s.labs.ahinh.me
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
  - host: rustmon.k8s.labs.ahinh.me
    http:
      paths:
      - backend:
          service:
            name: rustmon
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
